hydroflow/tests/snapshots/surface_forwardref__forwardref_basic_forward@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_forwardref.rs
expression: df.serde_graph().unwrap().to_mermaid()
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#02f,color:#fff,stroke:#000
classDef pushClass fill:#ff0,stroke:#000
linkStyle default stroke:#aaa,stroke-width:4px,color:red,font-size:1.5em;
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1[\"(1v1) <tt>source_iter(0 .. 10)</tt>"/]:::pullClass
    2v1[/"(2v1) <tt>for_each(| v | out_send.send(v).unwrap())</tt>"\]:::pushClass
    1v1--->2v1
    subgraph sg_1v1_var_forward_ref ["var <tt>forward_ref</tt>"]
        2v1
    end
end

